--- a/destinations.html
+++ b/destinations.html
@@ -123,11 +123,11 @@
             <!-- MOBILE MENU -->
             <div id="mobile-menu" class="lg:hidden hidden transition-all duration-900 ease-in-out overflow-hidden">
                 <ul class="flex flex-col gap-4 p-5">
-                    <li><a href="index.html" class="block text-gray-700">Home</a></li>
-                    <li><a href="about.html" class="block text-gray-700">About Us</a></li>
-                    <li><a href="contact.html" class="block text-gray-700">Contact Us</a></li>
-                    <li><a href="destinations.html" class="block text-gray-700 active">Destinations</a></li>
-                    <li><a href="faq.html" class="block text-gray-700">FAQ</a></li>
+                    <li><a href="index.html" class="translate block text-gray-700" data-id="Beranda" data-en="Home">Home</a></li>
+                    <li><a href="about.html" class="translate block text-gray-700" data-id="Tentang Kami" data-en="About Us">About Us</a></li>
+                    <li><a href="contact.html" class="translate block text-gray-700" data-id="Hubungi Kami" data-en="Contact Us">Contact Us</a></li>
+                    <li><a href="destinations.html" class="translate block text-gray-700 active" data-id="Destinasi" data-en="Destinations">Destinations</a></li>
+                    <li><a href="faq.html" class="translate block text-gray-700" data-id="FAQ" data-en="FAQ">FAQ</a></li>
                     <li>
                         <div class="relative inline-block text-left lang-container">
                             <button class="lang-btn flex items-center justify-center gap-2">
@@ -196,7 +196,7 @@
 
                     <div class="">
                         <h1 class="text-xl md:text-2xl font-semibold translate lg:mt-0" data-id="Wilayah"
-                        data-en="Region">Wilayah
+                            data-en="Region">Wilayah
                     </div>
                     <div class="flex flex-wrap justify-start gap-4 mb-8 mt-7">
                         <button
@@ -234,7 +234,8 @@
                 </div>
                 <div class="w-full gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
                     <!-- Destination 1 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia" data-region="buleleng">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia"
+                        data-region="buleleng">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/71bc68ae-8bd9-4f5d-8f91-3dfcd7c87c2b.png"
                             alt="Beautiful sunset at Bali beach with palm trees and golden sand"
                             class="w-full h-full object-cover">
@@ -255,7 +256,8 @@
                     </div>
 
                     <!-- Destination 2 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe" data-region="tabanan">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe"
+                        data-region="tabanan">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6313fc7c-cbe5-46e8-a442-e2cc6c9bdbb3.png"
                             alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
                             class="w-full h-full object-cover">
@@ -272,7 +274,8 @@
                     </div>
 
                     <!-- Destination 3 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia" data-region="bangli">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia"
+                        data-region="bangli">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/da0fc06e-0706-4a03-b535-a461df58d3a6.png"
                             alt="Traditional Japanese temple in Kyoto with cherry blossoms"
                             class="w-full h-full object-cover">
@@ -289,8 +292,8 @@
                     </div>
 
                     <!-- Destination 4 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80"
-                        data-category="america" data-region="karangasem">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="america"
+                        data-region="karangasem">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4944da08-fc27-42a4-b91b-362ac7d04faa.png"
                             alt="New York City skyline at dusk with Empire State Building"
                             class="w-full h-full object-cover">
@@ -311,7 +314,8 @@
                     </div>
 
                     <!-- Destination 5 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach" data-region="jembrana">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach"
+                        data-region="jembrana">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1c882467-347e-4f0b-88a1-c07d65d9bc57.png"
                             alt="Overwater bungalows in Maldives with crystal clear turquoise water"
                             class="w-full h-full object-cover">
@@ -328,7 +332,8 @@
                     </div>
 
                     <!-- Destination 6 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe" data-region="klungkung">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe"
+                        data-region="klungkung">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ff5896f8-ed07-48d5-b509-77b3a502932d.png"
                             alt="Eiffel Tower in Paris with spring flowers in foreground"
                             class="w-full h-full object-cover">
@@ -345,7 +350,8 @@
                     </div>
 
                     <!-- Destination 7 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia" data-region="badung">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia"
+                        data-region="badung">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fea06b45-1a78-46c8-8107-6b21f620ce4a.png"
                             alt="Taj Mahal at sunrise with reflecting pool in Agra, India"
                             class="w-full h-full object-cover">
@@ -366,7 +372,8 @@
                     </div>
 
                     <!-- Destination 8 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach" data-region="denpasar">
+                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach"
+                        data-region="denpasar">
                         <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2bfe5fb7-b187-4897-b342-d8d6bae002df.png"
                             alt="Bora Bora island with overwater bungalows in turquoise lagoon"
                             class="w-full h-full object-cover">
@@ -439,10 +446,10 @@
 
     <!-- TAMBAHAN SCRIPT -->
     <script>
-        const btn = document.getElementById("toggle-nav");
+        const btnNav = document.getElementById("toggle-nav");
         const sidebar = document.getElementById("sidebar");
 
-        btn.addEventListener("click", () => {
+        btnNav.addEventListener("click", () => {
             sidebar.classList.toggle("-translate-x-full");
         });
     </script>
@@ -453,8 +460,8 @@
             const filterBtns2 = document.querySelectorAll('.filter-btn-2');
             const galleryItems = document.querySelectorAll('.gallery-item');
 
-            filterBtns.forEach(btn => {
-                btn.addEventListener('click', function () {
+            filterBtns.forEach(btnFilter => {
+                btnFilter.addEventListener('click', function () {
                     filterBtns.forEach(b => b.classList.remove('active', 'bg-[var(--primary-color)]', 'text-white'));
                     filterBtns.forEach(b => b.classList.add('bg-white', 'border', 'text-gray-700'));
 
@@ -473,8 +480,8 @@
                 });
             });
 
-            filterBtns2.forEach(btn => {
-                btn.addEventListener('click', function () {
+            filterBtns2.forEach(btnFilter => {
+                btnFilter.addEventListener('click', function () {
                     filterBtns2.forEach(b => b.classList.remove('active', 'bg-[var(--secondary-color)]', 'text-white'));
                     filterBtns2.forEach(b => b.classList.add('bg-white', 'border', 'text-gray-700'));
 
