--- a/contact.html
+++ b/contact.html
@@ -128,11 +128,11 @@
             <!-- MOBILE MENU -->
             <div id="mobile-menu" class="lg:hidden hidden transition-all duration-900 ease-in-out overflow-hidden">
                 <ul class="flex flex-col gap-4 p-5">
-                    <li><a href="index.html" class="block text-gray-700">Home</a></li>
-                    <li><a href="about.html" class="block text-gray-700">About Us</a></li>
-                    <li><a href="contact.html" class="block text-gray-700 active">Contact Us</a></li>
-                    <li><a href="destinations.html" class="block text-gray-700">Destinations</a></li>
-                    <li><a href="faq.html" class="block text-gray-700">FAQ</a></li>
+                    <li><a href="index.html" class="translate block text-gray-700" data-id="Beranda" data-en="Home">Home</a></li>
+                    <li><a href="about.html" class="translate block text-gray-700" data-id="Tentang Kami" data-en="About Us">About Us</a></li>
+                    <li><a href="contact.html" class="translate block text-gray-700 active" data-id="Hubungi Kami" data-en="Contact Us">Contact Us</a></li>
+                    <li><a href="destinations.html" class="translate block text-gray-700" data-id="Destinasi" data-en="Destinations">Destinations</a></li>
+                    <li><a href="faq.html" class="translate block text-gray-700" data-id="FAQ" data-en="FAQ">FAQ</a></li>
                     <li>
                         <div class="relative inline-block text-left lang-container">
                             <button class="lang-btn flex items-center justify-center gap-2">
