--- a/destinations.html
+++ b/destinations.html
@@ -163,7 +163,7 @@
     <section class="mt-24 md:mt-35 lg:mt-40">
         <div class="px-5 md:px-10 lg:px-15 xl:px-15 2xl:px-15">
             <button id="toggle-nav"
-                class="button-navigasi-phone fixed top-20 md:top-25 left-4 z-50 bg-[var(--secondary-color)] text-white p-2 rounded-md lg:hidden">
+                class="button-navigasi-phone fixed top-20 md:top-25 right-4 z-50 bg-[var(--secondary-color)] text-white p-2 rounded-md lg:hidden">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
                     <path fill="currentColor"
                         d="M15 19.88c.04.3-.06.62-.29.83a.996.996 0 0 1-1.41 0L9.29 16.7a.99.99 0 0 1-.29-.83v-5.12L4.21 4.62a1 1 0 0 1 .17-1.4c.19-.14.4-.22.62-.22h14c.22 0 .43.08.62.22a1 1 0 0 1 .17 1.4L15 10.75zM7.04 5L11 10.06v5.52l2 2v-7.53L16.96 5z" />
