--- a/destinations.html
+++ b/destinations.html
@@ -172,8 +172,8 @@
             <div class="grid grid-cols-1 lg:grid-cols-[2fr_8fr] gap-5 w-full">
                 <div id="sidebar"
                     class="navigasi fixed top-0 left-0 h-full w-64 bg-white shadow-lg border-r border-gray-200 transform -translate-x-full overflow-y-scroll lg:overflow-hidden transition-transform duration-300 ease-in-out lg:relative lg:translate-x-0 lg:w-auto lg:h-auto lg:shadow-none lg:border-none px-5 lg:pr-7 lg:pl-0 py-5 lg:pb-5 lg:pt-0 z-40">
-                    <h1 class="text-xl md:text-2xl font-semibold translate mt-20 md:mt-40 lg:mt-0" data-id="Saring"
-                        data-en="Filter">Saring
+                    <h1 class="text-xl md:text-2xl font-semibold translate mt-20 md:mt-40 lg:mt-0" data-id="Destinasi"
+                        data-en="Destination">Destinasi
                     </h1>
                     <div class="border-gray-300 pb-5 border-b-[1px] flex flex-wrap justify-start gap-4 mb-8 mt-7">
                         <button
@@ -232,162 +232,8 @@
                             data-filter="denpasar" data-en="Denpasar" data-id="Denpasar">Denpasar</button>
                     </div>
                 </div>
-                <div class="w-full gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
-                    <!-- Destination 1 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia"
-                        data-region="buleleng">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/71bc68ae-8bd9-4f5d-8f91-3dfcd7c87c2b.png"
-                            alt="Beautiful sunset at Bali beach with palm trees and golden sand"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Bali, Indonesia</h3>
-                            <p class="text-sm">Tropical paradise with beautiful beaches</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.8 (256 reviews)"
-                                    data-id="4.8 (256 pengulas)">4.8
-                                    (256)</span>
-                            </div>
-                        </div>
-                        <div class="absolute top-4 right-4 bg-yellow-400 text-white px-3 py-1 rounded-full text-xs font-bold translate"
-                            data-en="Popular" data-id="Populer">
-                            Popular
-                        </div>
-                    </div>
-
-                    <!-- Destination 2 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe"
-                        data-region="tabanan">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/6313fc7c-cbe5-46e8-a442-e2cc6c9bdbb3.png"
-                            alt="White buildings with blue domes in Santorini overlooking the Aegean Sea"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Santorini, Greece</h3>
-                            <p class="text-sm">Iconic whitewashed architecture</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.9 (312 reviews)"
-                                    data-id="4.9 (312 pengulas)">4.9
-                                    (312)</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Destination 3 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia"
-                        data-region="bangli">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/da0fc06e-0706-4a03-b535-a461df58d3a6.png"
-                            alt="Traditional Japanese temple in Kyoto with cherry blossoms"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Kyoto, Japan</h3>
-                            <p class="text-sm">Historic temples and gardens</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.7 (198 reviews)"
-                                    data-id="4.7 (198 pengulas)">4.7
-                                    (198)</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Destination 4 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="america"
-                        data-region="karangasem">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/4944da08-fc27-42a4-b91b-362ac7d04faa.png"
-                            alt="New York City skyline at dusk with Empire State Building"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">New York, USA</h3>
-                            <p class="text-sm">The city that never sleeps</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.6 (421 reviews)"
-                                    data-id="4.6 (421 pengulas)">4.6
-                                    (421)</span>
-                            </div>
-                        </div>
-                        <div class="absolute top-4 right-4 bg-blue-500 text-white px-3 py-1 rounded-full text-xs font-bold translate"
-                            data-id="Unggulan" data-en="Featured">
-                            Featured
-                        </div>
-                    </div>
-
-                    <!-- Destination 5 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach"
-                        data-region="jembrana">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/1c882467-347e-4f0b-88a1-c07d65d9bc57.png"
-                            alt="Overwater bungalows in Maldives with crystal clear turquoise water"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Maldives</h3>
-                            <p class="text-sm">Luxury overwater bungalows</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.9 (287 reviews)"
-                                    data-id="4.9 (287 pengulas)">4.9
-                                    (287)</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Destination 6 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="europe"
-                        data-region="klungkung">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/ff5896f8-ed07-48d5-b509-77b3a502932d.png"
-                            alt="Eiffel Tower in Paris with spring flowers in foreground"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Paris, France</h3>
-                            <p class="text-sm">Romantic city of lights</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.8 (389 reviews)"
-                                    data-id="4.8 (389 pengulas)">4.8
-                                    (389)</span>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Destination 7 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="asia"
-                        data-region="badung">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/fea06b45-1a78-46c8-8107-6b21f620ce4a.png"
-                            alt="Taj Mahal at sunrise with reflecting pool in Agra, India"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Agra, India</h3>
-                            <p class="text-sm">Iconic wonder of the world</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.7 (245 reviews)"
-                                    data-id="4.7 (245 pengulas)">4.7
-                                    (245)</span>
-                            </div>
-                        </div>
-                        <div class="absolute top-4 right-4 bg-green-500 text-white px-3 py-1 rounded-full text-xs font-bold translate"
-                            data-id="Sedang tren" data-en="Trending">
-                            Trending
-                        </div>
-                    </div>
-
-                    <!-- Destination 8 -->
-                    <div class="gallery-item relative rounded-xl overflow-hidden shadow-lg h-80" data-category="beach"
-                        data-region="denpasar">
-                        <img src="https://storage.googleapis.com/workspace-0f70711f-8b4e-4d94-86f1-2a93ccde5887/image/2bfe5fb7-b187-4897-b342-d8d6bae002df.png"
-                            alt="Bora Bora island with overwater bungalows in turquoise lagoon"
-                            class="w-full h-full object-cover">
-                        <div class="destination-info absolute bottom-0 left-0 right-0 p-6 text-white">
-                            <h3 class="text-xl font-bold mb-1">Bora Bora</h3>
-                            <p class="text-sm">Stunning tropical escape</p>
-                            <div class="flex items-center mt-2">
-                                <span class="text-yellow-300 mr-1">★</span>
-                                <span class="text-sm translate" data-en="4.9 (301 reviews)"
-                                    data-id="4.9 (301 pengulas)">4.9
-                                    (301)</span>
-                            </div>
-                        </div>
-                    </div>
+                <div id="gallery-container" class="w-full gallery-container grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-6">
+                    
                 </div>
             </div>
         </div>
@@ -443,6 +289,7 @@
     </footer>
 
     <script src="script.js"></script>
+    <script src="loopData.js"></script>
 
     <!-- TAMBAHAN SCRIPT -->
     <script>
@@ -499,26 +346,6 @@
                     });
                 });
             });
-
-            const loadMoreBtn = document.querySelector('.load-more-btn');
-            let itemsToShow = 8;
-
-            loadMoreBtn.addEventListener('click', function () {
-                alert('In a live implementation, this would load more destination cards from the server.');
-            });
-
-            const textEffect = document.querySelector('.textEffect');
-
-            function checkScroll() {
-                const position = textEffect.getBoundingClientRect().top;
-                const screenPosition = window.innerHeight / 1.3;
-
-                if (position < screenPosition) {
-                    textEffect.classList.add('animate-pulse');
-                }
-            }
-
-            window.addEventListener('scroll', checkScroll);
         });
     </script>
 
