--- a/faq.html
+++ b/faq.html
@@ -22,7 +22,7 @@
                 class="navbar flex justify-between items-center px-4 md:px-0 lg:px-0 xl:px-0 2xl:px-0 py-3 md:py-4 lg:py-4 xl:py-4 2xl:py-4">
                 <div class="logo">
                     <a href="index.html">
-                        <img src="images/logo.svg" alt="" class="w-32 md:w-40 lg:w-35">
+                        <img src="images/logo.svg" alt="" class="w-32 md:w-40 lg:w-35" loading="lazy">
                     </a>
                 </div>
 
